2007-11-18 David Barnett <daviebdawg@gmail.com>
  * Changed COFF v2 optional magic number to 0x5678 (same as COFF v1)
  * Fixed strange errors in sx.asm and pageselw2.asm tests expected output

2007-11-18 David Barnett <daviebdawg@gmail.com>
  * Fixed COFF magic number regression

2007-11-17 David Barnett <daviebdawg@gmail.com>
  * Fixed CONFIG definitions for 16c54a and 16c715 (in PIC headers)

2007-11-14 David Barnett <daviebdawg@gmail.com>
  * Updated gpasm manpage for flag to output new COFF format (-C)

2007-11-13 David Barnett <daviebdawg@gmail.com>
  * Merged changes from patch by Andreas Kabel to support the new COFF format
  across all of gputils

2007-11-12 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed -g option to give meaningful error instead of failed
  assertion when missing .file directive (bug #1825940)

2007-11-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Added support for 18f2321

2007-11-11 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed bad information on 12f509 and 18f6722 in processor data

2007-11-10 David Barnett <daviebdawg@gmail.com>
  * Fixed old version number to 0.13.5 (actually released 2007-10-27)

2007-11-08 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed gpasm absolute mode to give "maximum range" warnings between
  program memory and eeprom

2007-11-08 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed maxrom to respect max eeprom address (but temporarily
  removed warnings for addresses in between)

2007-11-05 David Barnett <daviebdawg@gmail.com>
  * [gplink] Applied patch from Robert Pearce to fix address/line mapping in
  COD files

2007-11-05 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Updated gpcfg-table.c based on MPASMWIN 5.13 and script by Michael
  Ballbach

2007-11-05 David Barnett <daviebdawg@gmail.com>
  * Changed 'FCMEM' to 'FCMEN' in p18f4550.inc

2007-10-28 David Barnett <daviebdawg@gmail.com>
  * Applied patch from Alain Portal to fix French manpage
